hphp/test/zend/good/ext/gd/tests/imagerotate_overflow.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!extension_loaded('gd')) {
    die("skip gd extension not available.");
}

if (!function_exists('imagerotate')) {
    die("skip imagerotate() not available.");
}
}
