hphp/test/zend/bad/ext/sockets/tests/bug51958.php.skipif
<?php
if (!extension_loaded('sockets')) {
    die('skip sockets extension not available.');
}
if (!defined('IPPROTO_IPV6')) {
	die('skip IPv6 not available.');
}
if (PHP_OS != "WINNT")
	die('skip test relies Winsock\'s error code for WSAEWOULDBLOCK/EAGAIN');